# TouchCPLib

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  StlTest.vcxproj  StlTest.vcxproj.filters  TouchCPLib.vcxproj
.github/workflows/: c-cpp.yml
docs/: Application_8cpp.html  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8h.html  Button_8h__dep__incl.map  Button_8h__dep__incl.md5  Button_8h__incl.map  Button_8h__incl.md5  Button_8h_source.html  Color_8h.html  Color_8h__dep__incl.map  Color_8h__dep__incl.md5  Color_8h__incl.map  Color_8h__incl.md5  Color_8h_source.html  Font_8h.html  Font_8h__dep__incl.map  Font_8h__dep__incl.md5  Font_8h__incl.map  Font_8h__incl.md5  Font_8h_source.html  GraphicsObject_8h.html  GraphicsObject_8h__dep__incl.map  GraphicsObject_8h__dep__incl.md5  GraphicsObject_8h__incl.map  GraphicsObject_8h__incl.md5  GraphicsObject_8h_source.html  GraphicsScene_8cpp.html  GraphicsScene_8cpp__incl.map  GraphicsScene_8cpp__incl.md5  GraphicsScene_8h.html  (+383 more)
docs/search/: all_0.js  all_1.js  (+65 more)
include/: Application.h  Button.h  Color.h  Font.h  GraphicsObject.h  GraphicsScene.h  ImageButton.h  Optional.h  Point.h  Rect.h  SDLException.h  SceneManager.h  SineWaveAnimation.h  SpaceGrid.h  TTFFontException.h  Task.h  Text.h  TouchCPException.h  TouchEnabledObject.h  TouchEventDispatcher.h  TouchInput.h  WavefunctionAnimation.h  Window.h  WorkerThread.h
src/: Application.cpp  Button.cpp  GraphicsScene.cpp  ImageButton.cpp  MainScene.cpp  MainThreadTaskRunner.cpp  SceneManager.cpp  SineWaveAnimation.cpp  Text.cpp  TouchEventDispatcher.cpp  TouchInput.cpp  WavefunctionAnimation.cpp  Window.cpp  WorkerThread.cpp  XYPlot.cpp
(+32 files in other folders)
